Improve convention not found UI

--- a/templates/conventions/common/form_header.html
+++ b/templates/conventions/common/form_header.html
@@ -53,7 +53,7 @@
                                         <div class="fr-pr-2w apilos-separator">{% include "conventions/home/statut_tag.html"  %}</div>
                                         {% if convention.programme.numero_galion %}
                                             <div class="fr-px-2w fr-text--sm apilos-separator">
-                                                <a href="{% url 'programmes:operation_conventions' numero_operation=convention.programme.numero_galion %}">
+                                                <a href="{% url 'programmes:operation_conventions' numero_operation=convention.programme.numero_galion %}?from_convention={{ convention.uuid }}">
                                                     Opération n°{{convention.programme.numero_galion}}
                                                 </a>
                                             </div>
