--- a/templates/operations/conventions.html
+++ b/templates/operations/conventions.html
@@ -17,7 +17,7 @@
                 {% if programme is None %}
                     <div class="fr-col-md-12 fr-mb-5w fr-mt-3w">
                         <div role="alert" class="fr-alert fr-alert--warning">
-                            <p class="fr-alert__title">L'operation numéro « {{ numero_operation }} » n'est pas disponible sur l'espace de financement du SIAP</p>
+                            <p class="fr-alert__title">L'opération numéro « {{ numero_operation }} » n'est pas disponible sur l'espace de financement du SIAP</p>
                         </div>
                     </div>
                 {% endif %}
