--- a/templates/conventions/actions/instructeur_validation.html
+++ b/templates/conventions/actions/instructeur_validation.html
@@ -5,7 +5,14 @@
 
     <div role="alert" class="fr-alert fr-alert--A_signer fr-icon-arrow-right-s-line-double h-100">
         {% if convention.is_avenant %}
-            {% include "conventions/avenant/complete_form_for_avenants.html" with form=complete_for_avenant_form %}
+            {% flag "override_cerfa" %}
+                <p class="fr-alert__title fr-mb-3w">Finaliser l'avenant en trois étapes</p>
+                <p class="fr-mb-3w">Toutes les corrections sont terminées ?</p>
+                <p class="fr-mb-3w">Nous vous invitons à vérifier le document CERFA de l'avenant avant sa validation finale.</p>
+                <a class="fr-btn fr-btn--primary" href="{% url 'conventions:finalisation_numero' convention_uuid=convention.uuid %}" data-turbo="false">Finaliser l'avenant</a>
+            {% else %}
+                {% include "conventions/avenant/complete_form_for_avenants.html" with form=complete_for_avenant_form %}
+            {% endflag %}
         {% else %}
             {% flag "override_cerfa" %}
                 <p class="fr-alert__title fr-mb-3w">Finaliser la convention en trois étapes</p>
