Fix typo recherche

--- a/templates/conventions/convention_list.html
+++ b/templates/conventions/convention_list.html
@@ -17,7 +17,7 @@
                                         {% if new_search %}
                                             <a href="/" class="fr-link">
                                                 <span class="fr-icon-close-circle-line fr-mr-1w"></span>
-                                                Réinitaliser la recherche
+                                                Réinitialiser la recherche
                                             </a>
                                         {% endif %}
                                     </div>
@@ -217,7 +217,7 @@
                         <div class="fr-mr-2w notes fr-col-2">Aucun résultat</div>
                         <a href="/" class="fr-link">
                             <span class="fr-icon-close-circle-line fr-mr-1w"></span>
-                            Réinitaliser la recherche
+                            Réinitialiser la recherche
                         </a>
                     </div>
                     <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--middle fr-mb-5w">
