--- a/templates/conventions/actions/edit_numero_galion.html
+++ b/templates/conventions/actions/edit_numero_galion.html
@@ -21,7 +21,7 @@
                                 <p class="fr-alert__title">Modifier le numéro de décision</p>
                                 <p>la modification de ce numéro de décision peut avoir des conséquences sur le lien avec les dossiers de financement</p>
                             </div>
-                            {% include "common/form/input_text.html" with form_input=programmeNumberForm.numero_galion editable=True%}
+                            {% include "common/form/input_text.html" with form_input=programmeNumberForm.numero_operation editable=True%}
 
                         </div>
                         <div class="fr-modal__footer">
