--- a/templates/conventions/new_convention_anru.html
+++ b/templates/conventions/new_convention_anru.html
@@ -45,7 +45,7 @@
                                     {% include "common/form/input_text.html" with form_input=form.nom %}
                                 </div>
                                 <div class="fr-col-md-12 fr-col-lg-4 fr-mb-2w">
-                                    {% include "common/form/input_text.html" with form_input=form.numero_galion %}
+                                    {% include "common/form/input_text.html" with form_input=form.numero_operation %}
                                 </div>
                             </div>
 
