--- a/templates/conventions/submitted.html
+++ b/templates/conventions/submitted.html
@@ -12,7 +12,7 @@
                 {% if siap_operation_not_found %}
                     <div class="fr-col-md-12 fr-mb-5w fr-mt-3w">
                         <div role="alert" class="fr-alert fr-alert--warning">
-                            <p class="fr-alert__title">L'opération numéro « {{convention.programme.numero_galion}} » n'est pas disponible sur l'espace de financement du SIAP</p>
+                            <p class="fr-alert__title">L'opération numéro « {{convention.programme.numero_operation}} » n'est pas disponible sur l'espace de financement du SIAP</p>
                         </div>
                     </div>
                 {% endif %}
