--- a/templates/operations/common/form_header.html
+++ b/templates/operations/common/form_header.html
@@ -4,8 +4,8 @@
         <div class="fr-col-8 fr-py-3w">
             <h1 class="fr-h2 apilos-d-inline">{{programme.nom}}</h1>
             <div class="apilos-text--italic">
-                {% if programme.numero_galion %}
-                    Opération n°{{programme.numero_galion}}
+                {% if programme.numero_operation %}
+                    Opération n°{{programme.numero_operation}}
                 {% endif %}
                 {% if request|is_instructeur and programme.bailleur %}
                     (Entreprise bailleur : {{ programme.bailleur }})
@@ -17,9 +17,9 @@
         </div>
         <div class="fr-col-4 fr-grid-row fr-grid-row--right">
             <div>
-                {% if CERBERE_AUTH and programme.numero_galion %}
+                {% if CERBERE_AUTH and programme.numero_operation %}
                     <div class="fr-grid-row fr-grid-row--right fr-my-2w">
-                        <a href="{{ request|get_siap_operation_url:programme.numero_galion }}">
+                        <a href="{{ request|get_siap_operation_url:programme.numero_operation }}">
                             Financement
                             <span class="fr-icon-arrow-right-line" aria-hidden="true"></span>
                         </a>
