--- a/templates/common/form/disable_form_input.html
+++ b/templates/common/form/disable_form_input.html
@@ -1,9 +1,9 @@
 {% load custom_filters %}
 
 {% if comments and parent_object_field %}
-    {% if not editable and comments|hasnt_active_comments:parent_object_field %}disabled{% endif %}
+    {% if not editable and comments|hasnt_active_comments:parent_object_field %}readonly{% endif %}
 {% elif comments and object_field %}
-    {% if not editable and comments|hasnt_active_comments:object_field %}disabled{% endif %}
+    {% if not editable and comments|hasnt_active_comments:object_field %}readonly{% endif %}
 {% else %}
-    {% if not editable %}disabled{% endif %}
+    {% if not editable %}readonly{% endif %}
 {% endif %}
