fix email, and image alt

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -13,7 +13,7 @@
                 </div>
                 <div class="fr-col-12 fr-col-lg-5 fr-pl-0 fr-pl-md-4w">
                     <figure class="fr-content-media fr-my-0">
-                        <img src="{% static "img/accueil.jpg" %}" class="content__homepage-image">
+                        <img src="{% static "img/accueil.jpg" %}" alt="Illustration APiLos" class="content__homepage-image">
                     </figure>
                 </div>
             </div>
