--- a/templates/settings/common/side_menu.html
+++ b/templates/settings/common/side_menu.html
@@ -19,7 +19,7 @@
                     </li>
                 {% endif %}
 
-                {% if request.user.is_superuser or request.user.is_staff %}
+                {% if user_is_staff_or_admin %}
                     <li class="fr-sidemenu__item{% if active_menu == 'bailleurs' %} fr-sidemenu__item--active{% endif %}">
                         <a class="fr-sidemenu__link" href="{% url 'settings:bailleurs' %}" target="_self" {% if active_menu == 'bailleurs' %}aria-current="page"{% endif %}>Bailleurs</a>
                     </li>
